# tsipy

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  notebooks  requirements.txt  requirements_387.txt  run.py  run_generator.py  setup.cfg  setup.py
.github/workflows/: ci.yml  mypy.yml
docs/: conf.py  correction.rst  fusion.rst  index.rst  references.bib  references.rst  requirements.txt  spelling_wordlist.txt  utils.rst
docs/notebooks/: demo_degradation.ipynb  demo_fusion.ipynb  demo_kernels.ipynb  demo_localgp.ipynb  demo_noise.ipynb  exp_acrim1_hf.nblink  exp_spm.nblink
results/01-18_12-29-38_exp-acrim/: data_results.csv
results/02-16_14-47-46_exp-acrim-erbs/: data_results.csv
results/exp_acrim_localgp_acrim/: data_results.csv
results/exp_fusion_localgp_200_acrim/: data_results.csv
results/exp_fusion_localgp_500_acrim/: data_results.csv
results/exp_fusion_localgp_acrim/: data_results.csv
results/exp_fusion_svgp_acrim/: data_results.csv
results/exp_tsi_40_datasets/ACRIM1_HF_full2/: data_results.csv
results/exp_tsi_40_datasets/ACRIM2_ERBS_full/: data_results.csv
results/exp_tsi_40_datasets/MultiSatellites_HF_ERBSmultiply1/: data_results.csv
results/exp_tsi_40_datasets/VIRGOFused_ACRIM2_ERBS/: data_results.csv
results/exp_tsi_40_datasets/VIRGOFused_ACRIM3_ERBS/: data_results.csv
results/exp_tsi_40_datasets/VIRGOFused_ACRIM3_TIM0/: data_results.csv
results/exp_tsi_40_datasets/VIRGOFused_TIM/: data_results.csv
results/exp_tsi_40_datasets/VIRGOFused_TIM_PREMOSFused/: data_results.csv
results/exp_tsi_40_datasets/VIRGOFused_TISIS/: data_results.csv
scripts/: demo_degradation.py  demo_fusion.py  demo_generator.py  exp_acrim.py  exp_acrim1_hf.ipynb  exp_acrim_erbs.py  exp_degradation.py  exp_fusion.py  exp_spm.ipynb  exp_tsi_40.py  exp_tsi_40_dataset.py  exp_virgo.py  run.bat  run_exp_fusion.sh  run_exp_tsi_40.sh  run_exp_virgo.sh
scripts/.ipynb_checkpoints/: exp_spm-checkpoint.ipynb
src/: __init__.py
src/tsipy/: __init__.py  __version__.py
src/tsipy/correction/: __init__.py  algorithms.py  exposure.py  generator.py  models.py
src/tsipy/correction/models/: __init__.py  models.py
src/tsipy/fusion/: __init__.py  core.py  kernels.py  local_gp.py  models_gp.py  utils.py  windows.py
src/tsipy/fusion/local_gp/: __init__.py  local_gp.py  windows.py
src/tsipy/utils/: __init__.py  base.py  data.py  display.py  plot.py  print.py
src/tsipy_utils/: __init__.py  data.py  visualizer.py
tests/: test_correction.py  test_degradation.py  test_env.py  test_fusion_core.py  test_fusion_kernels.py  test_fusion_localgp.py  test_fusion_svgp.py  test_fusion_windows.py  test_kernels.py  test_localgp.py  test_windows.py  utils.py  utils_fusion.py
tsipy/correction/: __init__.py  algorithms.py  base.py  exposure.py  generator.py
tsipy/correction/algorithms/: __init__.py  base.py
tsipy/correction/models/: __init__.py  models.py  parameters.py
tsipy/fusion/: __init__.py  kernels.py  utils.py
tsipy/fusion/local_gp/: local_gp.py  windows.py
tsipy/fusion/models/: __init__.py  models.py  parameters.py
tsipy/fusion/models_gp/: __init__.py  models_gp.py
tsipy/utils/: __init__.py  base.py  display.py
utils/: __init__.py  base.py  constants.py  data.py
utils/visualizer/: __init__.py  base.py  plot.py  results.py
