[metadata]
author = Rok Šikonja
author_email = sikonjarok@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent
description = Python package for processing TSI signals.
long_description = file: README.md
license = MIT
license_files = LICENSE.txt
name = tsipy
url = https://github.com/roksikonja/tsipy
version = 1.0.1
keywords = degradation correction, data fusion, scientific computing
