[metadata]
author = Rok Šikonja
author_email = sikonjarok@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent
description = Python package for processing TSI signals.
long_description = file: README.md
long_description_content_type= text/markdown
license = MIT
license_files = LICENSE.txt
name = tsipy
url = https://github.com/roksikonja/tsipy
version = 1.0.1
keywords = degradation correction, data fusion, scientific computing

[mypy]
files =
    src/,
    scripts/,
    tests/

[mypy-src.*]
disallow_untyped_defs = True

[mypy-gpflow.*]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-qpsolvers.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-sklearn.*]
ignore_missing_imports = True

[mypy-tables.*]
ignore_missing_imports = True

[mypy-tensorflow.*]
ignore_missing_imports = True

# Linters
[flake8]
exclude =
    .git/,
    __pycache__/,
    build/,
    dist/
max-line-length = 88
# Compatibility with black formatter
# E203 whitespace before ':'
# W503 line break before binary operator
extend-ignore = E203, W503
max-complexity = 13

[pylint.MASTER]
# Compatibility with black formatter
# C0330: Wrong hanging indentation before block (add 4 spaces)
# C0326: Bad whitespace
# E0401: Unable to import 'package' (import-error)
# R0801: Similar lines in n files
# C0103:  Variable name doesn't conform to snake_case naming style
disable = C0330, C0326, E0401, R0801, C0103
max-line-length = 88

# Imports formatting and sort
[isort]
src_paths = isort, test, scripts
profile = black
sections = FUTURE,STDLIB,FIRSTPARTY,THIRDPARTY,LOCALFOLDER
known_third_party =
    numpy
    pandas
    matplotlib
    scipy
    tables
    cvxpy
    gpflow
    tensorflow
    sklearn
known_local_folder =
    tsipy
    tests

# Formatters
[black]
line_length = 88
include =
    src/,
    tests/,
    scripts/
exclude = venv/

[pydocstyle]
inherit = false
# D100 Missing docstring in public module
# D104 Missing docstring in public package
# D401 First line should be in imperative mood
# ignore = D401, D100, D104
convention = google
